[gd_scene load_steps=19 format=3 uid="uid://cec5a8fd51lyh"]

[ext_resource type="Script" path="res://scripts/level_2.gd" id="1_bda2s"]
[ext_resource type="Texture2D" uid="uid://ddu1s2gbxxxtl" path="res://assets/closeddoor.png" id="2_u37lq"]
[ext_resource type="Texture2D" uid="uid://cv5b6t161oi5q" path="res://assets/Opendoornew.png" id="3_5830q"]
[ext_resource type="PackedScene" uid="uid://c8e45ixnq5udi" path="res://scenes/xylophone.tscn" id="4_eirg8"]
[ext_resource type="AudioStream" uid="uid://c73l6eedf2mu5" path="res://audio/fanfare.mp3" id="5_xso3o"]
[ext_resource type="AudioStream" uid="uid://dpec5jws8ypco" path="res://audio/xylophone/204646__juancamiloorjuela__xylophone-c4.wav" id="6_lo4ep"]
[ext_resource type="AudioStream" uid="uid://6q8efeu1vr7c" path="res://audio/xylophone/204648__juancamiloorjuela__xylophone-g4.wav" id="6_ohwbx"]
[ext_resource type="AudioStream" uid="uid://ccqmtayv4t2rk" path="res://audio/xylophone/204644__juancamiloorjuela__xylophone-e4.wav" id="7_u8waj"]
[ext_resource type="Script" path="res://scripts/play_background.gd" id="8_3dtdq"]
[ext_resource type="Texture2D" uid="uid://d2dmeo5t0ymat" path="res://assets/Green.png" id="9_bjbsy"]
[ext_resource type="Texture2D" uid="uid://bgfpuukppatll" path="res://assets/Red.png" id="10_qwnot"]
[ext_resource type="Texture2D" uid="uid://blqs17fw8cbnf" path="res://assets/Blue.png" id="11_mdq2m"]
[ext_resource type="PackedScene" uid="uid://c1obylkuev73w" path="res://scenes/player.tscn" id="13_twwih"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nacj1"]
size = Vector2(243, 305)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_asikx"]
radius = 70.0
height = 278.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7xtal"]
size = Vector2(57, 788)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfltp"]
size = Vector2(57, 788)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5vvqe"]
size = Vector2(1905, 85.5)

[node name="Level2" type="Node2D"]
script = ExtResource("1_bda2s")
fanfare_player_path = NodePath("Fanfare")
closed_door = ExtResource("2_u37lq")
open_door = ExtResource("3_5830q")

[node name="Xylophone" parent="." instance=ExtResource("4_eirg8")]
position = Vector2(871, 140)
scale = Vector2(0.25, 0.25)

[node name="Fanfare" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_xso3o")

[node name="XylophoneC4Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_lo4ep")

[node name="XylophoneE4Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_u8waj")

[node name="XylophoneG4Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ohwbx")

[node name="Timer" type="Timer" parent="."]

[node name="Background" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(717, 405)
scale = Vector2(3.05, 3.05)
texture = ExtResource("2_u37lq")
metadata/_edit_lock_ = true

[node name="Door" type="Area2D" parent="."]
script = ExtResource("8_3dtdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door"]
position = Vector2(717.5, 414.5)
shape = SubResource("RectangleShape2D_nacj1")

[node name="LeftStatue" type="Area2D" parent="."]
script = ExtResource("8_3dtdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftStatue"]
position = Vector2(318, 511)
shape = SubResource("CapsuleShape2D_asikx")

[node name="RightStatue" type="Area2D" parent="."]
script = ExtResource("8_3dtdq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightStatue"]
position = Vector2(1112, 510)
shape = SubResource("CapsuleShape2D_asikx")

[node name="Green" type="Sprite2D" parent="."]
position = Vector2(223, 80)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_bjbsy")

[node name="Red" type="Sprite2D" parent="."]
position = Vector2(87, 79)
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_qwnot")

[node name="Red2" type="Sprite2D" parent="."]
position = Vector2(898, 80)
scale = Vector2(0.8, 0.8)
texture = ExtResource("10_qwnot")

[node name="Green2" type="Sprite2D" parent="."]
position = Vector2(494, 81)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_bjbsy")

[node name="Green3" type="Sprite2D" parent="."]
position = Vector2(750, 81)
scale = Vector2(0.8, 0.8)
texture = ExtResource("9_bjbsy")

[node name="Blue" type="Sprite2D" parent="."]
position = Vector2(357, 81)
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_mdq2m")

[node name="Blue2" type="Sprite2D" parent="."]
position = Vector2(619, 79)
scale = Vector2(0.8, 0.8)
texture = ExtResource("11_mdq2m")

[node name="WallLeft" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2(-42.5, 391)
shape = SubResource("RectangleShape2D_7xtal")

[node name="WallRight" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2(1477, 390)
shape = SubResource("RectangleShape2D_tfltp")

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(772.5, 775.75)
shape = SubResource("RectangleShape2D_5vvqe")

[node name="Player" parent="." instance=ExtResource("13_twwih")]
position = Vector2(659, 523)
scale = Vector2(0.3, 0.3)

[connection signal="xylophone_note" from="Xylophone" to="." method="_on_xylophone_note"]
[connection signal="mouse_entered" from="Door" to="Door" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Door" to="Door" method="_on_mouse_exited"]
[connection signal="play_background" from="Door" to="." method="_on_play_background"]
[connection signal="mouse_entered" from="LeftStatue" to="LeftStatue" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="LeftStatue" to="LeftStatue" method="_on_mouse_exited"]
[connection signal="play_background" from="LeftStatue" to="." method="_on_play_background"]
[connection signal="mouse_entered" from="RightStatue" to="RightStatue" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="RightStatue" to="RightStatue" method="_on_mouse_exited"]
[connection signal="play_background" from="RightStatue" to="." method="_on_play_background"]
[connection signal="ready_to_leave" from="Player" to="." method="_on_player_ready_to_leave"]
